# Huffman

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  engines.h  main.cpp
backend/: .directory  HuffmanArchive.cpp  HuffmanArchive.h  HuffmanDearchive.cpp  HuffmanDearchive.h
engines/huffman-2/: deflate.cpp  export.h  inflate.cpp  stats.h  tree-build.cpp  tree-deserialize.cpp  tree-serialize.cpp  tree-sym.cpp  tree.h  util.cpp  util.h
engines/huffman-old/: HuffmanArchive.cpp  HuffmanArchive.h  HuffmanDearchive.cpp  HuffmanDearchive.h
frontend/: main.cpp
src/: engines.h  log.cpp  main.cpp  util.cpp  util.h
